feat(jam): creating jam

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -78,6 +78,9 @@
           <%= link_to "Search for a musician", search_path %>
           <!-- TODO: Think about a better name -->
         </div>
+        <div class="navbar-item">
+          <%= link_to "Let's jam!", new_jam_path %>
+        </div>
       </div>
       <div class="navbar-end">
         <% if authenticated? %>
