style: apply Tailwind CSS utility classes

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<div class="is-flex is-justify-content-center">
+<div class="flex justify-center pt-5">
   <svg width="500" height="200" viewBox="0 0 500 200" xmlns="http://www.w3.org/2000/svg">
     <!-- Texto estilizado -->
     <text x="50%" y="50%" font-size="60" font-family="sans-serif" fill="black" text-anchor="middle" dominant-baseline="middle">
