--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,37 +1,38 @@
 <div class="section">
   <%= form_tag search_results_path(search_params: @search_params), method: :get do %>
-  <div class="columns">
+  <div class="flex bg-indigo-50 rounded-2xl px-5">
     <div class="column">
       <div class="field">
-        <%= label_tag :country, "Country" %>
-        <%= text_field_tag :country, params[:country], class: "input"  %>
+        <%= label_tag :country, "Country", class: "font-semibold font-sans"  %>
+        <%= text_field_tag :country, params[:country], class: "input mt-2"  %>
       </div>
     </div>
     <div class="column">
       <div class="field">
-        <%= label_tag :city, "City" %>
-        <%= text_field_tag :city, params[:city], class: "input" %>
+        <%= label_tag :city, "City", class: "font-semibold font-sans"  %>
+        <%= text_field_tag :city, params[:city], class: "input mt-2" %>
       </div>
     </div>
     <div class="column">
       <div class="field">
-        <%= label_tag :instrument, "Instrument" %>
+        <%= label_tag :instrument, "Instrument", class: "font-semibold font-sans"  %>
         <br />
-        <div class="select">
+        <div class="select mt-2">
           <%= select_tag :instrument, options_from_collection_for_select(@instruments, "id", "name", {include_blank: "All", selected: params[:instrument]}) %>
         </div>
       </div>
     </div>
     <div class="column">
       <div class="field">
-        <%= label_tag :style, "Style" %>
+        <%= label_tag :style, "Style", class: "font-semibold font-sans"  %>
         <br />
-        <div class="select">
+        <div class="select mt-2">
           <%= select_tag :style, options_from_collection_for_select(@styles, "id", "name", {include_blank: "All", selected: params[:style]}) %>
         </div>
       </div>
     </div>
-    <div class="column is-flex is-align-items-end">
+    
+    <div class="flex items-center mt-5">
       <div class="field">
         <%= submit_tag "Search", class: "button is-primary" %>
       </div>
@@ -53,6 +54,8 @@
   </div>
   <% end %>
   <% else %>
-  <p class="has-text-centered">No profiles found matching your criteria</p>
+  <p class="text-center">No profiles found matching your criteria</p>
   <% end %>
 </div>
+
+# <div class="column is-flex is-align-items-end"> linha 35
